# PelletLab-ccs-under-50

./: .gitignore  README.md  pyproject.toml
pelletlab_ccs50/: areaAnalyzeIds.py  dbDataInsert.py  dbModels.py  dbRead.py  myDict.py
